--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 #adminmenu #menu-posts-bws-testimonial:hover div.wp-menu-image:before,
 #adminmenu #menu-posts-bws-testimonial.wp-has-current-submenu div.wp-menu-image:before,
 #adminmenu #menu-posts-bws-testimonial div.wp-menu-image:before {
-    background: url("../images/menu_single.png") no-repeat scroll center 8px transparent;
-    content: '';
+	background: url("../images/menu_single.png") no-repeat scroll center 8px transparent;
+	content: '';
 }
 #adminmenu #menu-posts-bws-testimonial.wp-not-current-submenu div.wp-menu-image {
-    opacity: 0.7;
+	opacity: 0.7;
 }
 .tstmnls-thumbnail > img {
 	float: left;
@@ -21,6 +21,9 @@
 	clear: both;
 	display: table;
 }
+.tstmnls_captcha_error{
+	color: #f00;
+}
 /*
 * styles for widget
 */
@@ -32,4 +35,24 @@
 #tstmnls_author,
 #tstmnls_company_name {
 	width: 100%;
+}
+.tstmnls_testimonial_comment{
+	margin: 0 0 1.75em;
+}
+.tstmnls_required_symbol{
+	color: #007acc;
+}
+.tstmnls_error{
+	color: #f00;
+	padding: 0;
+	margin: 0;
+}
+.tstmnls_error_form{
+	padding-bottom: 10px;
+	color: #f00;
+	margin: 0;
+}
+.tstmnls_field_form{
+	padding: 0;
+	margin: 0 0 1.75em;
 }
