--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,40 @@
 	padding: 0;
 	margin: 0 0 1.75em;
 }
+
+#tstmnls_gdpr_link_options {
+	border: 1px solid #e0e0e0;
+	max-width: 390px;
+	margin: 5px 0;
+	padding: 3px;
+}
+
+#tstmnls_gdpr_link::placeholder {
+	color: #cdcdcd;
+}
+
+#tstmnls_gdpr_link_options label {
+	display: block;
+}
+
+@media screen and ( min-width: 1100px ) {
+	.tstmnls_gdpr_td {
+		padding-top: 23px !important;
+	}
+}
+
+@media screen and ( max-width: 782px ) {
+	#tstmnls_gdpr_link_options {
+		padding: 8px;
+	}
+	#tstmnls_gdpr_link_options label input {
+		margin: 5px 0;
+		width: 100% !important;
+	}
+	#tstmnls_gdpr_link {
+		height: 40px;
+	}
+	#tstmnls_gdpr {
+		margin: 0;
+	}
+}
