--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@
 	text-align: right;
 	margin-bottom: 10px;
 }
+.rtl_testimonial_quote_footer {
+	text-align: left;
+	margin-bottom: 10px;
+}
 /* admin styles */
 #tstmnls_author,
 #tstmnls_company_name {
@@ -58,14 +62,14 @@
 }
 
 #tstmnls_gdpr_link_options {
-	border: 1px solid #e0e0e0;
-	max-width: 390px;
-	margin: 5px 0;
-	padding: 3px;
+border: 1px solid #e0e0e0;
+max-width: 390px;
+margin: 5px 0;
+padding: 3px;
 }
 
 #tstmnls_gdpr_link::placeholder {
-	color: #cdcdcd;
+   color: #cdcdcd;
 }
 
 #tstmnls_gdpr_link_options label {
@@ -74,7 +78,7 @@
 
 @media screen and ( min-width: 1100px ) {
 	.tstmnls_gdpr_td {
-		padding-top: 23px !important;
+		padding-top: 23px !important; 
 	}
 }
 
@@ -90,6 +94,10 @@
 		height: 40px;
 	}
 	#tstmnls_gdpr {
-		margin: 0;
+		margin: 0; 
 	}
+}
+
+.form-table th label {
+	cursor: auto;
 }
